# PWHLByTheNumbers

./: .gitignore  .secrets  Procfile  README.md  ai_client.py  attendance.py  backfill.py  combine_rosters.py  config.example.py  config.py  data_extract.ps1  db_queries.py  drive_upload.py  fetch_career_stats.py  game_analysis.py  goals_allowed_v_scored.py  home_away_analysis.py  message_gen.py  models.py  monte_carlo.py  notify.py  pipeline.py  prompts.py  pyproject.toml  render_player_spotlight.py  render_power_rankings.py  render_weekly_preview.py  render_weekly_recap.py  requirements.txt  run_weekly.py  scrape.py  setup_db.py  sync_toi.py  team_overview.py  test.py  test_game_241.py  update.py
.claude/: settings.local.json
DEPRECATED/: GOOGLE_DRIVE_SETUP.md  README.md  SETUP_SUMMARY.md  TIKTOK_WORKFLOW.md  WEEKLY_RECAPS_README.md  add_cloud_upload_to_vizs.py  get_refresh_token.py  install_google_drive.bat  load_recent_game.py  pwhl_backup.sql  run_pipeline.py  team_home_away_stats.json
data/: expansion_cities.json
data processing/: attendance.py  career_stats.py  combine_rosters.py  data_extract.ps1
debugging/: check_duplicates.py  debug_player_stats.py  debug_standings.py
metadata/: player_metadata.csv
output/: _render_recap_slide0.html  _render_recap_slide1.html  _render_recap_slide2.html
outputs/: game_analysis_235.json  game_analysis_235.txt  game_analysis_240.txt
pipeline_logs/: pipeline_run_20251229_145413.json  pipeline_run_20251229_145545.json  pipeline_run_20251230_100740.json  pipeline_run_20251230_100842.json  (+10 more)
raw_data/: goalies.json  (+5 more)
(+215 files in other folders)
