[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwhl-btn"
version = "0.1.0"
description = "PWHL By The Numbers — analytics, rendering, and automation"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pymysql",
    "requests",
    "jinja2",
    "playwright",
    "matplotlib",
    "numpy",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
